# Annotation_tool_exe_file

./: .env.example  .gitignore  README.md
.github/workflows/: build-macos.yml  build-windows.yml
annotation-tool-main/: CHANGELOG.md  LICENSE
annotation-tool-main/backend/: requirements.txt
annotation-tool-main/backend/app/api/: annotations.py  images.py
annotation-tool-main/detc-core/: LICENSE  pyproject.toml  train.py
annotation-tool-main/detc-core/model/: __init__.py  backbone.py  detc_model.py  head.py
annotation-tool-main/detc-core/utils/: metrics.py  visualize.py
annotation-tool-main/frontend/: api_client.py
annotation-tool-main/frontend/resources/: icon.icns  style_dark.qss
annotation-tool-main/frontend/tools/: drag_tool.py
annotation-tool-main/frontend/ui/: admin_dashboard.py  annotation_canvas.py
backend/app/: db.py  main.py
backend/app/api/: auth.py  autoannotate.py  export.py  projects.py
backend/app/core/: security.py
backend/app/ml/: hf_zero_shot.py  training_manager.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
detc-core/: NOTICE
detc-core/model/: blocks.py  neck.py
detc-core/utils/: __init__.py  dataset.py  loss.py
docs/: AnnotationTool_Installation_and_User_Guide.md
frontend/: main.py
frontend/resources/: style_light.qss
frontend/tools/: bbox_tool.py  polygon_tool.py  undo_redo_manager.py
frontend/ui/: auto_annotate_dialog.py  class_manager_dialog.py  export_dialog.py  login_window.py  main_window.py  project_dashboard.py  signup_window.py  train_model_dialog.py  window_controls.py
(+6 files in other folders)
