[project]
name = "detc-model"
version = "0.1.0"
description = "DETC — custom object-detection architecture trained on user-defined classes"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[tool.uv]
# Don't try to install this directory as a Python package — it's a scripts project.
package = false
